# lambda-calculus

./: CMakeLists.txt  main.c  main.cpp
